--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "console-stamp": "^3.1.1",
     "discord.js": "^14.11.0",
-    "dotenv": "^16.1.4"
+    "dotenv": "^16.1.4",
+    "sqlite3": "^5.1.6"
   },
   "engines": {
     "node": "^12.20.0 || ^14.13.1 || >=16.0.0"
