--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/forever-monitor": "^1.7.6",
     "@types/node": "^20.3.0",
     "nodemon": "^2.0.22",
     "rimraf": "^5.0.1",
@@ -27,6 +28,7 @@
     "console-stamp": "^3.1.1",
     "discord.js": "^14.11.0",
     "dotenv": "^16.1.4",
+    "forever-monitor": "^3.0.3",
     "sqlite3": "^5.1.6"
   },
   "engines": {
